# pandoc-notion-rs

./: .gitignore  Cargo.toml  LICENSE  NOTION_API_DOCUMENTATION.md  README.md  bulleted_list_notion_blocks.json  debug_notion_blocks.json  debug_output_text.txt  debug_pandoc_ast.json  debug_separate_lists.md  json  md_to_pandoc_ast.py  modified_with_spans.json  pandoc_inline_elements.md  pretty.json  quote_sample.md  sample_ast.json  sample_rich_text.md  test_list.md  test_span_transparency.sh  test_spans.py  todo_sample.md
debug_outputs/: debug_fixed_ast.json  debug_pandoc_ast.json  debug_standard_output.md
docs/notion/: rich_text.md  types_api.txt  types_api_base.md  types_api_code.md  types_api_heading.md  types_api_list.md  types_api_page.md  types_api_paragraph.md  types_api_quote.md
docs/panflute/: panflute_docs_base.txt  panflute_docs_batteries.txt  panflute_docs_standard_elements.txt  panflute_docs_standard_functions.txt  panflute_docs_table.txt
examples/: text_processor.rs
scripts/: generate_list_json.sh  span_test.py
src/: api.rs  converter.rs  lib.rs  notion_block_fetcher.rs  notion_block_putter.rs
test_data/: html_span_test.html  original.json  original.md  test.json  test_list_with_spans.json  todo_test.md
tests/: bullet_list_fix_test.rs  converter_integration.rs  debug_nested_list_retrieval.rs  notion_syntax_tests.rs  roundtrip_blocks.rs  roundtrip_headings.rs  roundtrip_lists.rs  roundtrip_nesting_patterns.rs  roundtrip_paragraphs.rs  roundtrip_quotes.rs  roundtrip_text.rs  strong_debug.rs  syntax_roundtrip_tests.rs  toggle_tests.rs
(+50 files in other folders)
