[package]
name = "pandoc-notion"
version = "0.1.0"
edition = "2024"

[dependencies]
pandoc_types = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notion-client = "1.0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3"
similar = { version = "2.2", features = ["text", "inline"] }
chrono = "0.4"
# Dependencies used only for tests
